# mems

./: .gitignore  README.md  env.yml  pyproject.toml  setup.cfg
configs/: mdae_cifar10_1x8.yaml  mdae_ffhq256_4x8.yaml  mdae_mnist_1x16.yaml  muvb_mnist_1x4.yaml
run/: train.py
src/mems/: __init__.py  datasets.py  mdae.py  mem.py  muvb.py  mvae.py  sampler.py  utils.py
src/mems/archs/: __init__.py  resnet.py  u2net.py  vdvae_license.md
