

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
  \.eggs         # exclude a few common directories in the
| \.git          # root of the project
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
)/
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_third_party = "numpy"
force_grid_wrap = 0
use_parentheses = true

[tool.setuptools_scm]
write_to = "src/mems/__version.py"
write_to_template = '__version__ = "{version}"'
fallback_version = "0.0"

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"
