[metadata]
name = mems
description = Multimeasurement Energy Models
long_description = file: README.md
author = Rupesh Kumar Srivastava
author_email = rupesh@nnaisense.com
keywords = python
license = MIT Licence
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Utilities
	Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
package_dir =
    =src
packages = find:
tests_require =
install_requires =
    flatten-dict==0.3.0
    imageio
    lightning-bolts==0.3.4
    omegaconf==2.0.6
    pytorch-lightning==1.4.6
    psutil
    requests
    sacred==0.8.2

[options.package_data]
* = *.txt, *.md, *.rst

[options.packages.find]
where = src

[options.extras_require]
# Development dependencies
dev =
    black
    flake8
    isort
    pre-commit

[mypy]
files=src/**/*.py, run/*.py, test/*.py
ignore_missing_imports=true

[flake8]
max-line-length = 120
max-complexity = 18
select = B,C,E,F,W,T4,B9
ignore = E203, E266, E501, W503, F403, F401
